--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,9 @@ lazrs==0.3.1
 matplotlib==3.3.4
 numba==0.53.1
 numpy==1.20.2
-pyclipper==1.2.1
 laspy==2.0.2
 shapely==1.7.1
-scikit-learn=0.24.2
+scikit-learn==0.24.2
 scipy==1.6.2
 tifffile==2021.6.14
 tqdm==4.61.0
