--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ matplotlib==3.3.4
 numba==0.53.1
 numpy==1.20.2
 laspy==2.0.2
+pandas==1.3.2
 shapely==1.7.1
 scikit-learn==0.24.2
 scipy==1.6.2
 tifffile==2021.6.14
 tqdm==4.61.0
 zarr==2.8.3
-open3d==0.13.0
