--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ package_dir =
 packages = find:
 python_requires = >=3.7
 install_requires =
-    folium
+    folium>=0.12
     matplotlib>=3.4
     numba>=0.54
     numpy>=1.20
