--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = upcp
-version = 0.1a0
+version = 0.1
 author = Daan Bloembergen
 author_email = daanbl.dev@gmail.com
 description = Repository for automatic classification and labeling of Urban PointClouds using data fusion and region growing techniques.
