--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - numba>=0.54
   - numpy>=1.20
   - pandas>=1.3
+  - pyntcloud>=0.3.1
   - shapely>=1.7
   - scikit-learn>=0.24
   - scipy>=1.6
@@ -21,3 +22,4 @@ dependencies:
   - zarr>=2.8
   - pip:
     - laspy[lazrs]~=2.0
+    - open3d~=0.16.0
