--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - matplotlib>=3.4
   - numba>=0.54
   - numpy>=1.20
+  - owslib>=0.27
   - pandas>=1.3
   - pyntcloud>=0.3.1
   - shapely>=1.7
