--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ matplotlib>=3.4
 numba>=0.54
 numpy>=1.20
 laspy[lazrs]~=2.0
+open3d~=0.16.0
+owslib>=0.27
 pandas>=1.3
+pyntcloud>=0.3.1
 shapely>=1.7
 scikit-learn>=0.24
 scipy>=1.6
