--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = upcp
-version = 0.1
+version = 0.11
 author = Daan Bloembergen
 author_email = daanbl.dev@gmail.com
 description = Repository for automatic classification and labeling of Urban PointClouds using data fusion and region growing techniques.
@@ -13,6 +13,8 @@ classifiers =
     Development Status :: 3 - Alpha
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent
 
@@ -27,7 +29,10 @@ install_requires =
     numba>=0.54
     numpy>=1.20
     laspy[lazrs]~=2.0
+    open3d~=0.16.0
+    owslib>=0.27
     pandas>=1.3
+    pyntcloud>=0.3.1
     shapely>=1.7
     scikit-learn>=0.24
     scipy>=1.6
@@ -40,8 +45,6 @@ notebooks =
     jupyterlab
     ipympl
     ipywidgets
-region_growing =
-    open3d>=0.14
 
 [options.packages.find]
 where = src
